--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "self",
   "version": "0.1.0",
@@ -12,7 +13,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
